Closed Bug 1247160 Opened 8 years ago Closed 8 years ago

Clipboard causes memory leak by internet shortcut

Categories

(Core :: Widget: Win32, defect)

Unspecified
Windows
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla47
Tracking Status
firefox47 --- fixed

People

(Reporter: m_kato, Assigned: m_kato)

Details

Attachments

(1 file)

      No description provided.
Summary: Clipboard causes memory leak by internet shotcut → Clipboard causes memory leak by internet shortcut
UTF8ToNewUnicode alloces new memory, so we don't need new alloc to convert to UTF-16

Review commit: https://reviewboard.mozilla.org/r/34297/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/34297/
Attachment #8717762 - Flags: review?(jmathies)
Comment on attachment 8717762 [details]
MozReview Request: Bug 1247160 - Clipboard causes memory leak by internet shortcut. r?jimm

https://reviewboard.mozilla.org/r/34297/#review31455
Attachment #8717762 - Flags: review?(jmathies) → review+
https://hg.mozilla.org/mozilla-central/rev/85b4f57c10f9
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla47
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: