Bug 1247160 - Clipboard causes memory leak by internet shortcut. r=jimm

UTF8ToNewUnicode alloces new memory, so we don't need new alloc to convert to UTF-16

MozReview-Commit-ID: K7saM1xxNQ1